--- a/Sunduk.PWA/Components/Stuff/HoleCapacityComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/HoleCapacityComponent.razor
@@ -6,7 +6,7 @@
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
     <MudGrid Spacing="1">
         <MudItem xs="12" sm="6">
-            <MudField Label="Параметры" Variant="Variant.Filled" DisableUnderLine="true" Class="mt-1"
+            <MudField Label="Параметры" Variant="Variant.Filled" Underline="false" Class="mt-1"
                       @onfocusout="(() => CurrentImage = Images.Base)">
                 <MudGrid Spacing="0">
                     <MudItem xs="12">
