--- a/Sunduk.PWA/Dialogs/EditSequenceDialog.razor
+++ b/Sunduk.PWA/Dialogs/EditSequenceDialog.razor
@@ -365,7 +365,7 @@
         }
     }
 
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; }
+    [CascadingParameter] IMudDialogInstance MudDialog { get; set; }
 
     [Parameter] public List<Tool> Tools { get; set; }
     [Parameter] public List<Sequence> Program { get; set; }
