--- a/Sunduk.PWA/Dialogs/QrDialog.razor
+++ b/Sunduk.PWA/Dialogs/QrDialog.razor
@@ -36,12 +36,13 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; }
+    [CascadingParameter] IMudDialogInstance MudDialog { get; set; }
 
     private bool androidhelp = false;
     private bool applehelp = false;
 
     void Submit() => MudDialog.Close(DialogResult.Ok(true));
+    void Cancel() => MudDialog.Cancel();
 
     void Android()
     {
