--- a/Sunduk.PWA/Shared/NavMenu.razor
+++ b/Sunduk.PWA/Shared/NavMenu.razor
@@ -3,9 +3,10 @@
     <MudNavLink Href="/calculator" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Calculate">Калькулятор режимов</MudNavLink>
     <MudNavLink Href="/stuff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.RoundedCorner">Всякая хрень</MudNavLink>
     <MudNavLink Href="/converters" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Transform">Конвертеры</MudNavLink>
-    <MudNavLink Href="/knowledge/about" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.MenuBook">База знаний</MudNavLink>
-    <MudNavLink Href="/timecalc" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.Timer">Расчеты времени</MudNavLink>
+    <MudNavLink Href="/knowledge/about" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.MenuBook">База знаний</MudNavLink>
+    <MudNavLink Href="/timecalc" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Timer">Расчеты времени</MudNavLink>
     <MudNavLink Href="/sunducam" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.FeaturedPlayList">SunduCAM</MudNavLink>
+    <MudNavLink Href="/dynamic-templates" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.Code">Шаблонник</MudNavLink>
 </MudNavMenu>
 
 @code {
