--- a/Sunduk.PWA/Components/CAM/EditSequenceComponent.razor
+++ b/Sunduk.PWA/Components/CAM/EditSequenceComponent.razor
@@ -579,13 +579,13 @@
             break;
     }
     <MudItem Class="mt-4" xs="12">
-        <MudTextField T="string" DisableUnderLine="true" Label="Предпросмотр" Style="font-family: 'Roboto Mono', monospace; font-size: medium;" Variant="Variant.Filled" Text="@("\n" + ExampleText.Trim('\n'))" Lines="@(ExampleText.Trim('\n').Count(x => x == '\n') + 3)" />
+        <MudTextField T="string" Underline="false" Label="Предпросмотр" Style="font-family: 'Roboto Mono', monospace; font-size: medium;" Variant="Variant.Filled" Text="@("\n" + ExampleText.Trim('\n'))" Lines="@(ExampleText.Trim('\n').Count(x => x == '\n') + 3)" />
     </MudItem>
 </MudGrid>
 
 <MudItem Class="d-flex flex-row-reverse py-0 px-0 mt-4">
     <MudButton Variant="Variant.Outlined" Size="Size.Large"
-               EndIcon="@Icons.TwoTone.PlaylistAdd" Color="Color.Primary"
+               EndIcon="@Icons.Material.TwoTone.PlaylistAdd" Color="Color.Primary"
                OnClick="Submit">Подтвердить</MudButton>
 </MudItem>
 
