--- a/Sunduk.PWA/Components/Converters/AngleConverterComponent.razor
+++ b/Sunduk.PWA/Components/Converters/AngleConverterComponent.razor
@@ -7,19 +7,19 @@
             </MudItem>
         }
         <MudItem xs="12" md="6">
-            <MudField Variant="Variant.Filled" Label="Градусы в десятичной системе" DisableUnderLine="true">
+            <MudField Variant="Variant.Filled" Label="Градусы в десятичной системе" Underline="false">
                 <MudTextField @bind-Value="DecimalAngleString" @onfocusin="@(() => CalcDecimal = false)" DisableUnderLine="false"
                               T="string" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="°" Immediate="true" />
             </MudField>
         </MudItem>
         <MudItem xs="12" md="6">
-            <MudField Variant="Variant.Filled" Label="Радианы" DisableUnderLine="true">
+            <MudField Variant="Variant.Filled" Label="Радианы" Underline="false">
                 <MudTextField @bind-Value="RadiansAngleString" @onfocusin="@(() => InputRadians = true)" @onfocusout="@(() => InputRadians = false)" DisableUnderLine="false" 
                               T="string" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="rad" Immediate="true" />
             </MudField>
         </MudItem>
         <MudItem xs="12" md="12">
-            <MudField Variant="Variant.Filled" Label="Градусная система" DisableUnderLine="true">
+            <MudField Variant="Variant.Filled" Label="Градусная система" Underline="false">
                 <MudGrid>
                     <MudItem xs="4" sm="4" md="4" lg="4">
                         <MudTextField @bind-Value="IntAngleString" @onfocusin="@(() => CalcDecimal = true)" DisableUnderLine="false"
