--- a/Sunduk.PWA/Components/Stuff/Arc2Component.razor
+++ b/Sunduk.PWA/Components/Stuff/Arc2Component.razor
@@ -1,7 +1,7 @@
 ﻿<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
     <MudGrid Spacing="1">
         <MudItem xs="12" sm="6">
-            <MudField Label="Параметры" Variant="Variant.Filled" DisableUnderLine="true" Class="mt-1"
+            <MudField Label="Параметры" Variant="Variant.Filled" Underline="false" Class="mt-1"
             @onfocusout="(() => CurrentImage = Images.Base)">
                 <MudGrid Spacing="0">
                     <MudItem xs="12">
@@ -71,7 +71,7 @@
             </div>
         </MudHidden>
         <MudItem xs="12">
-            <MudField Label="Результат" Variant="Variant.Filled" DisableUnderLine="true" Class="mt-n1">
+            <MudField Label="Результат" Variant="Variant.Filled" Underline="false" Class="mt-n1">
                 <MudGrid Spacing="1">
                     <MudItem xs="12" Class="mt-2">
                         @if (Math.Abs(PartDiameter - StartDiameter) > 0.001)
@@ -118,12 +118,12 @@
                 <MudExpansionPanel Class="rounded-0" Text="Пример программы для Fanuc">
                     <MudGrid Class="mb-1 pa-n3">
                         <MudItem xs="6" md="4">
-                            <MudSwitch @bind-Checked="@RoundCorner" Label="Скруглить углы" Color="Color.Primary" Class="ma-n3"/>
+                            <MudSwitch T="bool" @bind-Checked="@RoundCorner" Label="Скруглить углы" Color="Color.Primary" Class="ma-n3"/>
                         </MudItem>
                         <MudItem xs="6" md="4">
                             @if (RoundCorner)
                             {
-                                <MudTextField @bind-Value="_Blunt" T="string" Label="Радиус скругления" Variant="Variant.Text" Margin="Margin.Dense" Immediate="true" Adornment="Adornment.End" AdornmentText="мм"  Class="ma-n4" DisableUnderLine="true"/>
+                                <MudTextField @bind-Value="_Blunt" T="string" Label="Радиус скругления" Variant="Variant.Text" Margin="Margin.Dense" Immediate="true" Adornment="Adornment.End" AdornmentText="мм"  Class="ma-n4" Underline="false"/>
                             }
                         </MudItem>
                     </MudGrid>
