--- a/Sunduk.PWA/Dialogs/ConfirmDialog.razor
+++ b/Sunduk.PWA/Dialogs/ConfirmDialog.razor
@@ -9,7 +9,7 @@
 </MudDialog>
 @code 
 {
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; }
+    [CascadingParameter] IMudDialogInstance MudDialog { get; set; }
 
     [Parameter] public string Message { get; set; }
     [Parameter] public string OkMessage { get; set; }
