--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -22,7 +22,9 @@
         <MudItem xs="6" md="4" lg="4" xl="2">
             <SectionButton Label="SunduCAM" Link="/sunducam" Icon="@Icons.Material.Outlined.FeaturedPlayList" />
         </MudItem>
-        
+        <MudItem xs="6" md="4" lg="4" xl="2">
+            <SectionButton Label="Шаблонник" Link="/dynamic-templates" Icon="@Icons.Material.Outlined.Code" />
+        </MudItem>
     </MudGrid>
 </MudContainer>
 
